compiler/fir/analysis-tests/testData/resolve/diagnostics/sealedClassConstructorCall.kt
sealed class A

val b = <!INVISIBLE_REFERENCE!>A<!>()
